compilateurDeca/src/test/deca/syntax/invalid/objet/return_vide.deca
// Description:
//    Erreur de syntaxe : 'return;' sans expression.
//
// Resultats:
//    Erreur syntaxique ligne 12
//
// Historique:
//    cree le 13/01/2026

class A {
    void m() {
        return;
    }
}
{
}